# sims-helpers

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: database.py  markdown.py
src/simshelpers/: markdown.py  reports.py
src/simshelpers/database/: database.py
src/simshelpers/database/credentials_example/: creds.yaml
src/simshelpers/math/: README.md  fft.py
src/simshelpers/parallel/: parallel.py
src/simshelpers/util/: bot.py  util.py
